--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Build and push container
         run: |
           podman build -t mycontainer:v1 .
-          podman tag mycontainer:v1 docker.io/${{ secrets.DOCKER_USERNAME }}/mycontainer:v1
-          podman push docker.io/${{ secrets.DOCKER_USERNAME }}/mycontainer:v1
+          podman tag mycontainer:v1 docker.io/douglas-atkinson/mycontainer:v1
+          podman push docker.io/douglas-atkinson/mycontainer:v1
           
